# 2025-Capstone

./: .gitignore  run_ros2_launch.sh  udev_rules.sh
src/fake_lidar_with_tf/: package.xml  setup.cfg  setup.py
src/fake_lidar_with_tf/fake_lidar_with_tf/: fake_lidar_with_tf.py
src/freespace_detection/: package.xml  setup.cfg  setup.py
src/freespace_detection/freespace_detection/: floor_detector.py  test.py
src/freespace_detection/launch/: freespace_detection_launch.py
src/freespace_detection/scripts/: col_to_ch_lut.npy  d.py  distance_lut.npy  floor_detection_backup.py  generate_luts.py  scan_viewer.py
src/image_tools/src/: cam2image.cpp
src/network_control/: package.xml  setup.cfg  setup.py
src/network_control/network_control/: network_control_node.py  supabase_manager.py
src/network_control/test/: ._test_copyright.py
src/omo_r1_bringup/launch/: omo_r1_bringup.launch.py
src/omo_r1_bringup/omo_r1_bringup/scripts/: omo_r1_mcu_node.py
src/omo_r1_bringup/param/: omo_r1_mcu.yaml
src/omo_r1_description/urdf/: omo_r1.urdf
src/omo_r1_navigation2/launch/: navigation2.launch.py
src/omo_r1_navigation2/map/: map.yaml
src/omo_r1_navigation2/param/: omo_r1.yaml  omo_r1_4F_backup.yaml  omo_r1_rotate
src/pose_converter/: CMakeLists.txt  package.xml
src/pose_converter/src/: pose_converter_node.cpp
src/robot_launch_package/: package.xml  setup.cfg  setup.py
src/robot_launch_package/launch/: multi_node_launch.py
src/segmentation_to_map/: package.xml  setup.cfg  setup.py
src/segmentation_to_map/segmentation_to_map/: node.py
src/stella_vslam_ros/src/: stella_vslam_ros.cc  stella_vslam_ros.h
