<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>network_control</name>
  <version>0.0.1</version>
  <description>2025-1 CGV Capstone: Robot Control System Package</description>
  <maintainer email="hslee@handong.ac.kr">Hyunseo Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>omo_r1_interfaces</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
