<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gunmin0525@gmail.com">gunminy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 테스트 관련 의존성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 일반 의존성 -->
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>             
  <depend>omo_r1_interfaces</depend>    

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
